--- a/Sources/ToDo.html
+++ b/Sources/ToDo.html
@@ -1,6 +1,9 @@
-Things need to do:
-<ul>
+<html>
+  <body>
+<ul>Things need to do:
   <li>Add c++20 repo to replit.com
   <li>Add Empire to the structure, see below.
   <li>Add secoter class to the structure:  Empire-->Sector-->Planet
 </ul>
+  </body>
+</html?
